--- a/Templates/Report.html
+++ b/Templates/Report.html
@@ -56,6 +56,13 @@
                 /* Make images full width on smaller screens */
             }
         }
+
+        /* Style for the logo image */
+        .logo-img {
+            max-height: 100%;
+            /* Make logo height proportional to header height */
+            width: auto;
+        }
     </style>
 </head>
 
@@ -66,6 +73,7 @@
             <p>Department: {{ department }}</p>
         </div>
         <div class="header-right">
+            <img src="{{ logo }}" alt="Logo" class="logo-img">
             <p>Date: {{ today }}</p>
         </div>
     </header>
@@ -85,6 +93,8 @@
         </tr>
     </table>
     <img src="{{ image_path }}" alt="Original picture">
+    <h2>Color Space for analysis</h2>
+    <img src="{{ color_space_plot_path }}" alt="color_space">
     <table>
         <tr>
             <td>
